<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WebViewPrototype</string>
    <string name="menu_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_submit">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="user_name">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="error">Hello</string>
    <string name="charity">Hello There</string>
    <string name="name">Name</string>
    <string name="def">Default</string>
    <string name="fname">Form Name</string>
    <string name="title_activity_charity">CharityActivity</string>
    <string name="title_activity_form">Form</string>
    <string name="form_submit">Submit Form</string>
    <string name="prompt">Please select a value</string>
    <string name="warning">Are you sure that you want to go back and discard your changes?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">Confirmation</string>
    <string name="info"> Click on one of the tabs below to go see a form\'s fields</string>
    <string name="charsel">Please select a charity</string>
    <string name="dialog_form_submission">Could not submit form. Please try again.</string>
	<string name="dialog_form_title">Warning</string>
	<string name="help_popup">Help</string>
	<string name="help_message"> To see the contents of a form click on the list view below.</string>
	<string name="connection_message"> No Internet Connection available</string>
	<string name="no_forms_message"> There are no forms available.</string>
	<string name="no_fields_message">There are no fields to show for this form</string>
	<string name="succ">Success. Form content updated!</string>
</resources>