<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#2F4F4F"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >
                <EditText android:id="@+id/user_name"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColorHint="#F7F7F7"
        android:paddingLeft="100px"
        />
        
        <ImageButton
        android:id="@+id/delete1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteUsername"
        android:clickable="true"
        android:src="@android:drawable/ic_input_delete" />
        
    </LinearLayout>
      
    <LinearLayout 
          android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        	    <EditText android:id="@+id/password"
	    android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" 
         android:textColorHint="#F7F7F7"
         android:paddingLeft="100px"
        />
        
                <ImageButton
        android:id="@+id/delete2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="deletePassword"
        android:src="@android:drawable/ic_input_delete" />
        
    </LinearLayout>

    <TextView
        android:textColor="@color/FloralWhite"
        android:id="@+id/charitySel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charsel"
        android:layout_gravity="center_horizontal"
        />
    <Spinner
		android:id="@+id/charitySpinner"
		android:prompt="@string/prompt"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_gravity="center_horizontal"
	    />
    
    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="submitMessage"
	        android:text="@string/button_submit" 
	        android:layout_gravity="center_horizontal"
	        />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:visibility="gone" />
    

</LinearLayout>